--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Pictsee Images-->
@@ -72,94 +71,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SpR-eH-GMK">
-                                <rect key="frame" x="20" y="214" width="250" height="250"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="XzQ-bc-wlp"/>
-                                    <constraint firstAttribute="height" constant="250" id="pGH-gH-X0Y"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esE-tZ-Bnv">
-                                <rect key="frame" x="20" y="474" width="40" height="40"/>
-                                <color key="backgroundColor" red="0.20878684623899946" green="0.78333881181366527" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="eQQ-jV-y47"/>
-                                    <constraint firstAttribute="height" constant="40" id="wd7-sH-Tp9"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="btnFilter1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w5Z-yF-7Wp"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3nx-rI-J9k">
-                                <rect key="frame" x="70" y="474" width="40" height="40"/>
-                                <color key="backgroundColor" red="0.29276174869561511" green="0.44526001668504822" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="5Rz-1E-0D3"/>
-                                    <constraint firstAttribute="width" constant="40" id="Izo-wZ-22L"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="btnFilter2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qNy-Ql-qUM"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="upZ-DG-dKK">
-                                <rect key="frame" x="170" y="474" width="40" height="40"/>
-                                <color key="backgroundColor" red="1" green="0.68321398451867066" blue="0.41996188279583468" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="29q-sd-iD4"/>
-                                    <constraint firstAttribute="height" constant="40" id="9KB-lP-UO1"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="btnFilter4:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Axa-Mn-3Pw"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oxY-M0-Mcw">
-                                <rect key="frame" x="220" y="474" width="40" height="40"/>
-                                <color key="backgroundColor" red="0.83288971353487395" green="1" blue="0.53535524270712265" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="3Bm-lc-SzD"/>
-                                    <constraint firstAttribute="height" constant="40" id="iU8-aB-RA2"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="btnFilter5:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eXV-Jt-0uP"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8k9-Ky-syz">
-                                <rect key="frame" x="120" y="474" width="40" height="40"/>
-                                <color key="backgroundColor" red="0.79038028692396223" green="0.56086433980088235" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="1mS-y3-PVY"/>
-                                    <constraint firstAttribute="height" constant="40" id="hKz-8o-6yg"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="btnFilter3:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rin-rM-ipx"/>
-                                </connections>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X5C-6U-nFL">
-                                <rect key="frame" x="20" y="145" width="250" height="30"/>
+                                <rect key="frame" x="175" y="87" width="250" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="V9o-FR-JAV"/>
-                                    <constraint firstAttribute="width" constant="250" id="VAh-sX-PpO"/>
+                                    <constraint firstAttribute="width" constant="250" id="IgG-QE-7p5"/>
+                                    <constraint firstAttribute="height" constant="30" id="muj-5z-emo"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SpR-eH-GMK">
+                                <rect key="frame" x="175" y="137" width="250" height="250"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="250" id="FcZ-i1-cQu"/>
+                                    <constraint firstAttribute="width" constant="250" id="XzQ-bc-wlp"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="cxb-JC-76h"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="ocK-ck-cB8"/>
+                                    <constraint firstAttribute="height" constant="250" id="pGH-gH-X0Y"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="va4-XL-JDS"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="esE-tZ-Bnv" firstAttribute="top" secondItem="SpR-eH-GMK" secondAttribute="bottom" constant="10" id="5bm-eN-kIc"/>
-                            <constraint firstItem="upZ-DG-dKK" firstAttribute="top" secondItem="SpR-eH-GMK" secondAttribute="bottom" constant="10" id="5gD-hh-bwa"/>
-                            <constraint firstItem="upZ-DG-dKK" firstAttribute="leading" secondItem="8k9-Ky-syz" secondAttribute="trailing" constant="10" id="6Fo-do-wwO"/>
-                            <constraint firstItem="oxY-M0-Mcw" firstAttribute="top" secondItem="SpR-eH-GMK" secondAttribute="bottom" constant="10" id="GY0-Oi-Snk"/>
-                            <constraint firstItem="oxY-M0-Mcw" firstAttribute="leading" secondItem="upZ-DG-dKK" secondAttribute="trailing" constant="10" id="GhG-hg-lAU"/>
-                            <constraint firstItem="8k9-Ky-syz" firstAttribute="top" secondItem="SpR-eH-GMK" secondAttribute="bottom" constant="10" id="MN7-HF-4Dz"/>
-                            <constraint firstItem="3nx-rI-J9k" firstAttribute="leading" secondItem="esE-tZ-Bnv" secondAttribute="trailing" constant="10" id="PC1-bF-9ZO"/>
-                            <constraint firstItem="X5C-6U-nFL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="81" id="W33-La-1t9"/>
-                            <constraint firstItem="SpR-eH-GMK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="XTr-Cw-DZh"/>
-                            <constraint firstItem="esE-tZ-Bnv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fwV-Zm-rLO"/>
-                            <constraint firstItem="3nx-rI-J9k" firstAttribute="top" secondItem="SpR-eH-GMK" secondAttribute="bottom" constant="10" id="h2l-Mt-jyN"/>
-                            <constraint firstItem="8k9-Ky-syz" firstAttribute="leading" secondItem="3nx-rI-J9k" secondAttribute="trailing" constant="10" id="pFG-9i-C5x"/>
-                            <constraint firstItem="X5C-6U-nFL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sKt-YA-pbR"/>
+                            <constraint firstItem="SpR-eH-GMK" firstAttribute="top" secondItem="X5C-6U-nFL" secondAttribute="bottom" constant="20" id="4l1-dn-j8i"/>
+                            <constraint firstItem="X5C-6U-nFL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JtG-in-ZYd"/>
+                            <constraint firstItem="X5C-6U-nFL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="23" id="jL0-Ec-wAU"/>
+                            <constraint firstItem="SpR-eH-GMK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lqh-rZ-1FS"/>
                         </constraints>
                     </view>
                     <toolbarItems>
@@ -188,7 +127,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1117" y="350"/>
+            <point key="canvasLocation" x="1117" y="340"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mKE-hd-ZTG">
