--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="pKs-Se-7L9" detailTextLabel="H6g-be-sQw" style="IBUITableViewCellStyleSubtitle" id="CPJ-wZ-6hh">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="pKs-Se-7L9" detailTextLabel="iz5-P9-UbB" style="IBUITableViewCellStyleSubtitle" id="CPJ-wZ-6hh">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CPJ-wZ-6hh" id="QHj-TW-mrA">
@@ -28,8 +28,8 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="H6g-be-sQw">
-                                            <rect key="frame" x="15" y="25.5" width="40.5" height="13.5"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iz5-P9-UbB">
+                                            <rect key="frame" x="15" y="25.5" width="30.5" height="13.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -71,8 +71,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X5C-6U-nFL">
-                                <rect key="frame" x="175" y="87" width="250" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="caption" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X5C-6U-nFL">
+                                <rect key="frame" x="175" y="130" width="250" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="IgG-QE-7p5"/>
                                     <constraint firstAttribute="height" constant="30" id="muj-5z-emo"/>
@@ -81,7 +81,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SpR-eH-GMK">
-                                <rect key="frame" x="175" y="137" width="250" height="250"/>
+                                <rect key="frame" x="175" y="180" width="250" height="250"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="250" id="FcZ-i1-cQu"/>
@@ -97,16 +97,24 @@
                         <constraints>
                             <constraint firstItem="SpR-eH-GMK" firstAttribute="top" secondItem="X5C-6U-nFL" secondAttribute="bottom" constant="20" id="4l1-dn-j8i"/>
                             <constraint firstItem="X5C-6U-nFL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JtG-in-ZYd"/>
-                            <constraint firstItem="X5C-6U-nFL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="23" id="jL0-Ec-wAU"/>
+                            <constraint firstItem="X5C-6U-nFL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="66" id="jL0-Ec-wAU"/>
                             <constraint firstItem="SpR-eH-GMK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lqh-rZ-1FS"/>
                         </constraints>
                     </view>
                     <toolbarItems>
                         <barButtonItem systemItem="action" id="Nij-Mc-xXc"/>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="BfY-Pb-c13"/>
-                        <barButtonItem systemItem="camera" id="eaQ-Qu-jWZ"/>
+                        <barButtonItem systemItem="camera" id="eaQ-Qu-jWZ">
+                            <connections>
+                                <action selector="btnAddCameraImage:" destination="BYZ-38-t0r" id="dUv-6u-PIR"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="fr4-UL-kX5"/>
-                        <barButtonItem systemItem="organize" id="i5i-YX-Tt2"/>
+                        <barButtonItem systemItem="organize" id="i5i-YX-Tt2">
+                            <connections>
+                                <action selector="btnAddImage:" destination="BYZ-38-t0r" id="Icx-4L-Gp8"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="8hd-mr-YlI"/>
                         <barButtonItem title="F1" id="7xo-7O-7La">
                             <color key="tintColor" red="0.83288971349999996" green="1" blue="0.53535524270000001" alpha="1" colorSpace="calibratedRGB"/>
