--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -99,10 +99,6 @@
                         </constraints>
                     </view>
                     <toolbarItems>
-                        <barButtonItem systemItem="action" id="Nij-Mc-xXc">
-                            <color key="tintColor" red="0.81284105038986998" green="0.3980597674307973" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="BfY-Pb-c13"/>
                         <barButtonItem systemItem="camera" id="eaQ-Qu-jWZ">
                             <color key="tintColor" red="0.62238219895287961" green="0.069226933463453114" blue="0.30654510371297478" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -117,7 +113,7 @@
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="H8n-7l-GQx"/>
-                        <barButtonItem systemItem="organize" id="9qO-vG-fGN">
+                        <barButtonItem systemItem="action" id="9qO-vG-fGN">
                             <color key="tintColor" red="0.14501351730254225" green="0.74646090961130196" blue="0.81339986910994766" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="btnSaveToFolder:" destination="BYZ-38-t0r" id="wCl-eh-qPr"/>
